add fonts to proje

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </div>
       </header>
       <main class="content">
-        <section class="grid-item profile">1</section>
-        <section class="grid-item social">2</section>
-        <section class="grid-item sales">3</section>
-        <section class="grid-item revenume">4</section>
-        <section class="grid-item running-task">5</section>
+        <section class="grid-item profile"></section>
+        <section class="grid-item social"></section>
+        <section class="grid-item sales"></section>
+        <section class="grid-item revenume"></section>
+        <section class="grid-item running-task"></section>
       </main>
     </section>
   </body>
