complate social and profile

--- a/index.html
+++ b/index.html
@@ -26,8 +26,51 @@
         </div>
       </header>
       <main class="content">
-        <section class="grid-item profile"></section>
-        <section class="grid-item social"></section>
+        <section class="grid-item profile">
+          <div class="avatar-profile">
+            <img src="./assets/image 6.png" alt="avatar user" />
+          </div>
+          <div class="info-profile">
+            <h3>Denny Poser</h3>
+            <p>@uixfucker</p>
+          </div>
+          <div class="dropdown-profile">
+            <span></span>
+          </div>
+        </section>
+        <section class="grid-item social">
+          <div class="box-social">
+            <img src="./assets/icon.png" alt="retwwit icon" />
+            <div class="info-social">
+              <p>Reviews</p>
+              <h3>485</h3>
+            </div>
+            <div class="percent">
+              <p class="percent-text">+ 2%</p>
+            </div>
+          </div>
+          <div class="box-social">
+            <img src="./assets/icon (1).png" alt="retwwit icon" />
+            <div class="info-social">
+              <p>Total followers</p>
+              <h3>27 K</h3>
+            </div>
+            <div class="percent">
+              <p class="percent-text">- 2%</p>
+            </div>
+          </div>
+          <div class="box-social">
+            <img src="./assets/icon (2).png" alt="retwwit icon" />
+            <div class="info-social">
+              <p>Total Likes</p>
+              <h3>12445</h3>
+            </div>
+            <div class="percent">
+              <p class="percent-text">+ 16%</p>
+            </div>
+          </div>
+          <button class="btn-task">Create task</button>
+        </section>
         <section class="grid-item sales"></section>
         <section class="grid-item revenume"></section>
         <section class="grid-item running-task"></section>
