design sales section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,23 @@
           </div>
           <button class="btn-task">Create task</button>
         </section>
-        <section class="grid-item sales"></section>
+        <section class="grid-item sales">
+          <div class="head">
+            <div class="left-sale">
+              <h3>Sales</h3>
+              <p>6 items</p>
+            </div>
+            <div class="right-sale">
+              <select name="timeframe" class="select">
+                <option value="last-week">Last 7 Days</option>
+              </select>
+              <p>11 May 2021 - 18 May 2021:</p>
+            </div>
+          </div>
+          <div>
+            <img src="./assets/Vector (1).png" alt="Chart" />
+          </div>
+        </section>
         <section class="grid-item revenume"></section>
         <section class="grid-item running-task"></section>
       </main>
