design revenume section

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
         </section>
         <section class="grid-item sales">
           <div class="head">
-            <div class="left-sale">
+            <div class="left-side">
               <h3>Sales</h3>
               <p>6 items</p>
             </div>
-            <div class="right-sale">
+            <div class="right-side">
               <select name="timeframe" class="select">
                 <option value="last-week">Last 7 Days</option>
               </select>
@@ -88,7 +88,23 @@
             <img src="./assets/Vector (1).png" alt="Chart" />
           </div>
         </section>
-        <section class="grid-item revenume"></section>
+        <section class="grid-item revenume">
+          <div class="head">
+            <div class="left-side">
+              <h3>Revenue</h3>
+              <p>£100.5</p>
+            </div>
+            <div class="right-side">
+              <select name="timeframe" class="select">
+                <option value="last-week">Last 7 Days</option>
+              </select>
+              <p>11 May 2021 - 18 May 2021:</p>
+            </div>
+          </div>
+          <div>
+            <img src="./assets/Chart.png" alt="Chart" />
+          </div>
+        </section>
         <section class="grid-item running-task"></section>
       </main>
     </section>
