--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section class="section">
       <header class="header">
-        <div class="right">
+        <div class="left">
           <img
             src="./assets/Group 2856831.svg"
             alt="dashboard icon"
@@ -18,7 +18,7 @@
           />
           <h2 class="header-title">Fucker dashboard</h2>
         </div>
-        <div class="left">
+        <div class="right">
           <p class="perioud">You have 5 days Free Trial version</p>
           <img src="./assets/notification.png" alt="notification icon" />
           <img src="./assets/setting.png" alt="setting icon" />
@@ -105,7 +105,127 @@
             <img src="./assets/Chart.png" alt="Chart" />
           </div>
         </section>
-        <section class="grid-item running-task"></section>
+        <section class="grid-item running-task">
+          <div class="head-task">
+            <div class="left-side">
+              <h3>Running Tasks</h3>
+            </div>
+            <div class="right-side">
+              <select name="timeframe" class="select">
+                <option value="All">All tasks</option>
+              </select>
+            </div>
+          </div>
+          <div class="tasks">
+            <div class="task">
+              <div class="title-status">
+                <div class="icon">
+                  <img src="./assets/Group 2856899.png" alt="icon status" />
+                </div>
+                <p>Auto Following</p>
+              </div>
+              <div class="status">
+                <p class="text">Completing:</p>
+                <p class="number-percent">74%</p>
+                <p class="more">...</p>
+              </div>
+              <div class="range-status">
+                <input type="range" class="range-staus-input" />
+              </div>
+              <div class="company-name">
+                <p class="title-prop">Company name</p>
+                <p class="value-prop">My campaign 01</p>
+              </div>
+              <div class="folowers">
+                <p class="title-prop">Folowers</p>
+                <p class="value-prop">123</p>
+              </div>
+              <div class="number-sales">
+                <p class="title-prop">Number Sales</p>
+                <p class="value-prop">12</p>
+              </div>
+              <div class="erned">
+                <p class="title-prop">Earned</p>
+                <p class="value-prop">$ 2367</p>
+              </div>
+              <div class="start-data">
+                <p class="title-prop">Start date</p>
+                <p class="value-prop">12/04</p>
+              </div>
+            </div>
+            <div class="task">
+              <div class="title-status">
+                <div class="icon">
+                  <img src="./assets/Chat.png" alt="icon status" />
+                </div>
+                <p>Boost comments</p>
+              </div>
+              <div class="status">
+                <p class="text">Completing:</p>
+                <p class="number-percent">14%</p>
+                <p class="more">...</p>
+              </div>
+              <div class="range-status">
+                <input type="range" class="range-staus-input chat" />
+              </div>
+              <div class="company-name">
+                <p class="title-prop">Company name</p>
+                <p class="value-prop">My campaign 02</p>
+              </div>
+              <div class="folowers">
+                <p class="title-prop">Folowers</p>
+                <p class="value-prop">18</p>
+              </div>
+              <div class="number-sales">
+                <p class="title-prop">Number Sales</p>
+                <p class="value-prop">0</p>
+              </div>
+              <div class="erned">
+                <p class="title-prop">Earned</p>
+                <p class="value-prop">$ 0</p>
+              </div>
+              <div class="start-data">
+                <p class="title-prop">Start date</p>
+                <p class="value-prop">12/04</p>
+              </div>
+            </div>
+            <div class="task">
+              <div class="title-status">
+                <div class="icon">
+                  <img src="./assets/Group 2856900.png" alt="icon status" />
+                </div>
+                <p>Auto Following</p>
+              </div>
+              <div class="status">
+                <p class="text completed">Completed</p>
+                <p class="more">...</p>
+              </div>
+              <div class="range-status">
+                <input type="range" class="range-staus-input heart" />
+              </div>
+              <div class="company-name">
+                <p class="title-prop">Company name</p>
+                <p class="value-prop">My campaign 03</p>
+              </div>
+              <div class="folowers">
+                <p class="title-prop">Folowers</p>
+                <p class="value-prop">123</p>
+              </div>
+              <div class="number-sales">
+                <p class="title-prop">Number Sales</p>
+                <p class="value-prop">12</p>
+              </div>
+              <div class="erned">
+                <p class="title-prop">Earned</p>
+                <p class="value-prop">$ 2367</p>
+              </div>
+              <div class="start-data">
+                <p class="title-prop">Start date</p>
+                <p class="value-prop">12/04</p>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </section>
   </body>
